crates/laplace-macro/tests/ui/fail/byoc_unknown_arg.rs
// SPDX-License-Identifier: Apache-2.0

#[laplace_macro::laplace_byoc_test(mode = "strict")]
fn unknown_arg_is_rejected() {}

fn main() {}
